src/objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <description>Represents an agreement in the system</description>
	<fields>
        <fullName>APTS_Refresh_Account_Customer_Info__c</fullName>
        <formula>IF(AND($User.Id == OwnerId,ISPICKVAL(Apttus__Status__c,&quot;Draft&quot;)), 
HYPERLINK(&quot;/apex/APTS_RefreshAccountCustomerInfo?id=&quot;&amp;Id&amp;&quot;&amp;baseObject=Agreement&quot;&amp;&quot;&amp;name=&quot;&amp;APTS_LP_AccountCustomer__r.Name&amp;&quot;&amp;typeId=&quot;&amp; APTS_LP_AccountCustomer__r.RecordTypeId&amp;&quot;&amp;GUID=&quot;&amp; APTS_LP_AccountCustomer__r.GUID__c , &quot;Refresh&quot;,&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refresh/Add Account Customer Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Opportunity__c</fullName>
        <label>Opportunity</label>
        <length>255</length>
        <type>Text</type>
    </fields>   
    <fields>
        <fullName>APTS_AQ1__c</fullName>
        <formula>TEXT(APTS_Country__c) + APTS_LP_Sales_Organization__c + APTS_Local_Channel__r.APTS_Code__c + APTS_Sales_Office__r.PickList_Code__c + APTS_GTV_Code__c + &apos;1&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Fields AQ 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_AQ2__c</fullName>
        <formula>TEXT(APTS_Country__c) + APTS_LP_Sales_Organization__c + APTS_Local_Channel__r.APTS_Code__c + APTS_Sales_Office__r.PickList_Code__c + APTS_GTV_Code__c + &apos;2&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Fields AQ 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_AQ3__c</fullName>
        <formula>TEXT(APTS_Country__c) + APTS_LP_Sales_Organization__c + APTS_Local_Channel__r.APTS_Code__c + APTS_Sales_Office__r.PickList_Code__c + APTS_GTV_Code__c + &apos;3&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Fields AQ 3</label>
        <type>Text</type>
    </fields>
<fields>
        <fullName>APTS_Approver_User_IDs__c</fullName>
        <description>semil-colon separated value of the approvers assigned for the MSPA through approval process</description>
        <label>Approver User IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
 <fields>
        <fullName>APTS_Account_End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indirect customer to which the MSPA is related. Auto populated if MSPA created from Opportunity.</inlineHelpText>
        <label>Account End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (Account End User)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_End_Date__c</fullName>
        <description>Used for MSPA template to display correct date format</description>
        <formula>IF(ISNULL(Apttus__Contract_End_Date__c), &quot;&quot;, TEXT(DAY(Apttus__Contract_End_Date__c)) +&quot;/&quot;+ 
IF((LEN(TEXT(MONTH(Apttus__Contract_End_Date__c)))=2), TEXT(MONTH(Apttus__Contract_End_Date__c)), (&quot;0&quot;+TEXT( MONTH(Apttus__Contract_End_Date__c)))) 
+&quot;/&quot;+ TEXT( YEAR(Apttus__Contract_End_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APTS_Agreement End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Price_Date__c</fullName>
        <description>Used for MSPA template to display correct date format</description>
        <formula>IF(ISNULL(APTS_LP_Price_Date__c), &quot;&quot;, TEXT(DAY(APTS_LP_Price_Date__c)) +&quot;/&quot;+ 
IF((LEN(TEXT(MONTH(APTS_LP_Price_Date__c)))=2), TEXT(MONTH(APTS_LP_Price_Date__c)), (&quot;0&quot;+TEXT( MONTH(APTS_LP_Price_Date__c)))) 
+&quot;/&quot;+ TEXT( YEAR(APTS_LP_Price_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APTS_Agreement Price Date</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>APTS_Agreement_Start_Date__c</fullName>
        <description>Used for MSPA template to display correct date format</description>
        <formula>IF(ISNULL(Apttus__Contract_Start_Date__c), &quot;&quot;, TEXT(DAY(Apttus__Contract_Start_Date__c)) +&quot;/&quot;+ 
IF((LEN(TEXT(MONTH(Apttus__Contract_Start_Date__c)))=2), TEXT(MONTH(Apttus__Contract_Start_Date__c)), (&quot;0&quot;+TEXT( MONTH(Apttus__Contract_Start_Date__c)))) 
+&quot;/&quot;+ TEXT( YEAR(Apttus__Contract_Start_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APTS_Agreement Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Approval_Rejection_Comment__c</fullName>
        <description>Field to hold the approval rejection comment provided by user. Value of this field will be set from trigger of Approval request object.</description>
        <label>Approval Rejection Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Generate_MSPA__c</fullName>
        <formula>IF($User.Id == OwnerId,IF(
AND(ISPICKVAL(Apttus__Status_Category__c, &quot;Request&quot;),OR(ISPICKVAL(Apttus__Status__c, &quot;Approved&quot;), ISPICKVAL(Apttus__Status__c, &quot;Generated&quot;), ISPICKVAL(Apttus__Status__c, &quot;Presented&quot;)),(Apttus__Workflow_Trigger_Viewed_Final__c=FALSE)), 
HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot;&amp;Id&amp;&quot;&amp;action=Generate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;), NULL),NULL)</formula>
        <label>Generate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Max_Approval_Levels__c</fullName>
        <label>Max Approval Levels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Chevron should appear if this checkbox is checked LP Spain</description>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_CH_AQ__c</fullName>
        <formula>TEXT(APTS_Country__c) + APTS_LP_Sales_Organization__c + APTS_Local_Channel__r.APTS_Code__c +  APTS_Sales_Office__r.PickList_Code__c  + APTS_GTV_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Fields Agreement Header</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Spain</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Create_MSPA_In_SAP__c</fullName>
        <formula>IF($User.Id == OwnerId,IF (OR(TEXT(Apttus__Status__c)=&apos;Approved but failed to load on SAP&apos;, APTS_Manually_Create_MSPA_in_SAP__c ==TRUE), HYPERLINK(&quot;/apex/APTS_SAPConnectorforMSPACreation?id=&quot; &amp;Id&amp;&quot;&quot;,IMAGE(&quot;/resource/APTS_CreateMSPAInMSPA2&quot;, &quot;Create MSPA&quot;),&quot;_self&quot;), NULL),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create MSPA In SAP</label>
        <type>Text</type>
    </fields>
 <fields>
        <fullName>APTS_Currency__c</fullName>
        <formula>TEXT(CurrencyIsoCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Distribution_Channel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Distribution Channel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Code_Used_For__c</field>
                <operation>equals</operation>
                <value>Distribution Channel</value>
            </filterItems>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Locale__c</field>
                <operation>equals</operation>
                <valueField>$Source.APTS_Locale__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Agreements (Distribution Channel)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
 <fields>
        <fullName>APTS_Estimated_Delivery_Time__c</fullName>
        <label>Estimated Delivery Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>    
    <fields>
        <fullName>APTS_GTV_Code__c</fullName>
        <label>GTV Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Discounts__c</fullName>
        <label>Hierarchy Discounts</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_level__c</fullName>
        <label>Hierarchy level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
	<fullName>APTS_Incoterm_Description__c</fullName>
	<description>Field to hold the description value of Incoterm in format of &quot;Code - Description&quot;. Value for this field is populated from Apttus LSO data.</description>
	<label>Incoterms</label>
	<length>255</length>
	<type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Incoterms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Auto populated using information from the Quotation or from the Buying Account (LOD selected)</inlineHelpText>
        <label>Incoterms</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Code_Used_For__c</field>
                <operation>equals</operation>
                <value>Incoterm</value>
            </filterItems>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Locale__c</field>
                <operation>equals</operation>
                <valueField>$Source.APTS_Locale__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Agreements (Incoterms)</relationshipLabel>
        <relationshipName>Agreements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Integration_Status__c</fullName>
        <label>Integration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Empty</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
<fields>
        <fullName>APTS_Is_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_LP_AccountCustomer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Customer name of the direct customer</description>
        <inlineHelpText>Direct customer to which the MSPA is related. Auto populated if MSPA created from Opportunity or Buying Account.</inlineHelpText>
        <label>Account Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>GIS Approved</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>MSPAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Account_End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indirect customer to which the MSPA is related.</description>
        <inlineHelpText>Indirect customer to which the MSPA is related. Auto populated if MSPA created from Opportunity.</inlineHelpText>
        <label>Primary Partner Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>GIS Approved</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MSPAs (Primary Partner Customer)</relationshipLabel>
        <relationshipName>MSPAs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Block_MSPA__c</fullName>
        <formula>IF($User.Id == OwnerId,IF (OR(TEXT(Apttus__Status__c)=&apos;Approved&apos;,TEXT(Apttus__Status__c)=&apos;Saturated&apos;), HYPERLINK(&quot;/apex/APTS_SAPConnectorforMSPACreation?id=&quot; &amp;Id&amp;&quot;&amp;BlockParam=True&quot;,IMAGE(&quot;/resource/APTS_BlockMSPA&quot;, &quot;Block MSPA&quot;),&quot;_self&quot;), NULL), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Button only available if action permitted by Country Admin; will block the MSPA in Salesforce/Apttus and in SAP.</inlineHelpText>
        <label>Block MSPA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Blocked</description>
        <inlineHelpText>Set MSPA to Blocked</inlineHelpText>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Clone__c</fullName>
        <formula>IF(true,HYPERLINK(&apos;/apex/Apttus_CMConfig__AgreementClone?id=&apos;&amp;Id+&apos;&amp;pageMode=detail&apos;, IMAGE(&apos;/resource/APTS_LP_Clone&apos;, &apos;Clone&apos;),&apos;_self&apos;) ,null   
)</formula>
        <label>Clone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Deactivate_MSPA__c</fullName>
        <formula>IF($User.Id == OwnerId,IF ( OR (ISPICKVAL(Apttus__Status__c, &quot;Draft&quot;), 
ISPICKVAL(Apttus__Status__c, &quot;Pending Approval&quot;), 
ISPICKVAL(Apttus__Status__c, &quot;Recalled&quot;)) , 
HYPERLINK(&quot;/apex/APTS_AgreementStatus?id=&quot;&amp;Id&amp;&quot;&amp;requestParameter=DeActivated&quot;, IMAGE(&quot;/resource/Apttus_Approval__Button_Deactivate&quot;, &quot;Button_Deactivate&quot;),&quot;_self&quot;), NULL),NULL)</formula>
        <inlineHelpText>Deactivation in Salesforce of the MSPA; no impact in SAP. MSPA was drafted and is no longer valid.</inlineHelpText>
        <label>Deactivate MSPA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set MSPA to Deactivated</inlineHelpText>
        <label>Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Distribution_Channel_Product__c</fullName>
        <description>Read only field. To be used in Product Filter</description>
        <label>Distribution Channel(Product)</label>
        <picklist>
            <controllingField>APTS_LP_Distribution_Channel__c</controllingField>
            <picklistValues>
                <fullName>BT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Distribution_Channel__c</fullName>
        <inlineHelpText>Auto populated from Account</inlineHelpText>
        <label>Distribution Channel (Do not use)</label>
        <picklist>
            <picklistValues>
                <fullName>BT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_LP_GTV_Level__c</fullName>
        <description>Product of GTV Level</description>
        <inlineHelpText>Product of GTV Level</inlineHelpText>
        <label>GTV Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    
    <fields>
        <fullName>APTS_LP_Group__c</fullName>
        <label>Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Incoterms__c</fullName>
        <inlineHelpText>Auto populated from Account</inlineHelpText>
        <label>Incoterms</label>
        <picklist>
            <picklistValues>
                <fullName>CFR - Costes y flete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIF - Costes, seguro y flete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP - Delivered At Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAT - Delivered At Terminal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP - Entrega con aduana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DES - Entrega en el buque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF - Entrega en frontera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDU - Entrega sin aduana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEQ - Entrg.en muelle (der.ad.pag.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOB - Franco a bordo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAS - Franco al costado del buque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FH - Franco domicilio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA - Franco transportista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZFE - Free delivery including packin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPT - Porte pagado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIP - Porte pagado y seguro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PD - Portes debidos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PP - Portes pagados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXW - Puesto en fábrica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UN - Sin franquear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZVR - Ver detalle:</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Local_Channel__c</fullName>
        <inlineHelpText>Auto populated from Account</inlineHelpText>
        <label>Local Channel</label>
        <picklist>
            <picklistValues>
                <fullName>OEMS CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadristas CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadristas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribución General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integradores y EPC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_LP_MSPA_Type__c</fullName>
        <description>Type of the MSPA</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSPA Type</label>
        <type>Text</type>
    </fields>
    <fields>
	<fullName>APTS_LP_MSPA_title__c</fullName>
	<description>Description of the MSPA</description>
	<label>Apply reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Max_LI_Discount__c</fullName>
        <description>MSPA Contract Max. LI Discount</description>
        <inlineHelpText>MSPA Contract Max. LI Discount</inlineHelpText>
        <label>Max. LI Discount</label>
        <summarizedField>Apttus__AgreementLineItem__c.Apttus_CMConfig__NetAdjustmentPercent__c</summarizedField>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Max_Order_Amount__c</fullName>
        <description>Total amount of the MSPA - Is a salesperson estimation about the total Amount of the opportunity. Sales person put this value.</description>
        <label>Max Order Amount (EUR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_LP_MaximumSubstituteDiscount__c</fullName>
        <label>Maximum Substitute Discount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Legacy_MSPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy MSPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_LP_No_Approval_Rule_Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Approval Rule Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Price_Date__c</fullName>
        <description>MSPA form create date</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field auto populated using the MSPA creation date (hence when pricing is applied the first time on the cart)</inlineHelpText>
        <label>Date of the Price List</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Product_Config__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this is true, execute a trigger which creates Empty cart for the agreement in the System</description>
        <label>Product Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Progress__c</fullName>
        <formula>IF(AND(ISPICKVAL(Apttus__Status__c , &quot;Draft&quot;),APTS_Approval_Required__c=False) ,IMAGE(&quot;/resource/APTS_MSPADraft&quot;, &quot;APTS_MSPADraft&quot;, 50, 600) 
,IF(AND(ISPICKVAL(Apttus__Status__c , &quot;Draft&quot;),APTS_Approval_Required__c=True) ,IMAGE(&quot;/resource/APTS_MSPAApprovReqd&quot;, &quot;APTS_MSPAApprovReqd&quot;, 50, 600) 
,IF( ISPICKVAL(Apttus__Status__c , &quot;Approval In Progress&quot;) ,IMAGE(&quot;/resource/APTS_MSPAApprovInProgress&quot;, &quot;APTS_MSPAApprovInProgress&quot;, 50, 600) 
,IF( ISPICKVAL(Apttus__Status__c , &quot;Approved but Action Required&quot;) ,IMAGE(&quot;/resource/APTS_MSPAApprovdActionReqd&quot;, &quot;APTS_MSPAApprovdActionReqd&quot;, 50, 600)+BR()+IF(APTS_Manually_Create_MSPA_in_SAP__c =FALSE,IMAGE(&quot;/resource/APTS_MSPARefreshNew&quot;, &quot;PageRefreshImage&quot;, 40, 600),NULL) 
,IF( ISPICKVAL(Apttus__Status__c , &quot;Approved but failed to load on SAP&quot;) ,IMAGE(&quot;/resource/APTS_ApprovedSAP&quot;, &quot;APTS_ApprovedSAP&quot;, 50, 600)  
,IF( ISPICKVAL(Apttus__Status__c , &quot;Approved&quot;) ,IMAGE(&quot;/resource/APTS_MSPAApproved&quot;, &quot;APTS_MSPAApproved&quot;, 50, 600) 
,IF( ISPICKVAL(Apttus__Status__c , &quot;Recalled&quot;) ,IMAGE(&quot;/resource/APTS_MSPADraft&quot;, &quot;APTS_MSPADraft&quot;, 50, 600) 
,IF( ISPICKVAL(Apttus__Status__c , &quot;Rejected&quot;) ,IMAGE(&quot;/resource/APTS_Rejected&quot;, &quot;APTS_Rejected&quot;, 50, 600) 
,IF( ISPICKVAL(Apttus__Status__c , &quot;Blocked&quot;) ,IMAGE(&quot;/resource/APTS_Blocked&quot;, &quot;APTS_Blocked&quot;, 50, 600) 
,IF( ISPICKVAL(Apttus__Status__c , &quot;Deactivated&quot;), IMAGE(&quot;/resource/APTS_Deactivated&quot;, &quot;APTS_Deactivated&quot;, 50, 600) 
,IF( ISPICKVAL(Apttus__Status__c , &quot;Saturated&quot;), IMAGE(&quot;/resource/APTS_Saturated&quot;, &quot;APTS_Saturated&quot;, 50, 600) 
,IF( ISPICKVAL(Apttus__Status__c , &quot;Saturated Expired&quot;), IMAGE(&quot;/resource/APTS_SaturatedExpired&quot;, &quot;APTS_SaturatedExpired&quot;, 50, 600) 
,IF( ISPICKVAL(Apttus__Status__c , &quot;Generated&quot;), IMAGE(&quot;/resource/APTS_MSPAGenerated&quot;, &quot;APTS_MSPAGenerated&quot;, 50, 600) 
,IF( ISPICKVAL(Apttus__Status__c , &quot;Presented&quot;), IMAGE(&quot;/resource/APTS_MSPAPresented&quot;, &quot;APTS_MSPAPresented&quot;, 50, 600) 
,IF( ISPICKVAL(Apttus__Status__c , &quot;Expired&quot;), IMAGE(&quot;/resource/APTS_Expired&quot;, &quot;APTS_Expired&quot;, 50, 600) 
,IF( ISPICKVAL(Apttus__Status__c , &quot;Ready for Signatures&quot;), IMAGE(&quot;/resource/APTS_ReadySignatures&quot;, &quot;APTS_ReadySignatures&quot;, 50, 600) 
, IMAGE(&quot;/resource/APTS_Base&quot;, &quot;APTS_Base&quot;, 50, 600) 
))))))))))))))))</formula>
        <label>Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Regenerate__c</fullName>
        <formula>IF (AND (ISPICKVAL( Apttus__Status__c ,&quot;Approved&quot;),  Apttus__Workflow_Trigger_Viewed_Final__c=TRUE), HYPERLINK(&quot;apex/Apttus__SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Regenerate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Regenerate&quot;, &quot;Regenerate&quot;), &quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regenerate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Residual_Amount__c</fullName>
        <description>Max order amount - Total Order Amount (Sum of the amount of the orders received in SAP and linked to the MSPA)</description>
        <label>Residual Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Sales_Office__c</fullName>
        <description>Sales office</description>
        <formula>Owner:User.Sales_Territory_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto populated from User Profile</inlineHelpText>
        <label>Sales Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Sales_Organization__c</fullName>
        <defaultValue>&quot;ABB&quot;</defaultValue>
        <description>Sales organization for which the MSPA is created; is the one of MSPA owner</description>
        <inlineHelpText>Auto populated from Account</inlineHelpText>
        <label>Sales Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales man on behalf of which the MSPA is created (by default = to the owner)</description>
        <inlineHelpText>Auto populated from User Profile</inlineHelpText>
        <label>Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MSPAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Select_Products__c</fullName>
        <formula>IF(AND(LEN( Apttus_CMConfig__PriceListId__c ) &gt; 0,RecordType.Name == $Setup.APTS_Agreement_Record_Type__c.APTS_Default_Record_Type__c ),IF(AND($User.Id == OwnerId,OR(ISPICKVAL ( Apttus__Status__c ,&apos;Draft&apos; ) ,ISPICKVAL ( Apttus__Status__c ,&apos;Recalled&apos;))),HYPERLINK(&quot;/apex/Apttus_CMConfig__AgreementConfiguration?id=&quot; &amp;Id&amp;&quot;&amp;useAdvancedApproval=true&amp;flow=LP_Spain&quot;,IMAGE(&quot;/resource/APTS_SelectOffering&quot;, &quot;SelectOffering&quot;),&quot;_self&quot;), 
IF(OR( 
ISPICKVAL(Apttus__Status__c ,&quot;Approval Required&quot;), 
ISPICKVAL(Apttus__Status__c,&quot;Expired&quot;), 
ISPICKVAL(Apttus__Status__c,&quot;Approved&quot;), 
ISPICKVAL(Apttus__Status__c,&quot;Approved but failed to load on SAP&quot;), 
ISPICKVAL(Apttus__Status__c,&quot;Approved but Action Required&quot;), 
ISPICKVAL(Apttus__Status__c,&quot;In Review&quot;), 
ISPICKVAL(Apttus__Status__c,&quot;Approval In Progress&quot;), 
ISPICKVAL(Apttus__Status__c,&quot;Generated&quot;), 
ISPICKVAL(Apttus__Status__c,&quot;Presented&quot;), 
ISPICKVAL(Apttus__Status__c,&quot;Rejected&quot;), 
ISPICKVAL(Apttus__Status__c,&quot;Pending Approval&quot;), 
AND(ISPICKVAL(Apttus__Status__c, &quot;Recalled&quot;),$User.Id != OwnerId) 
), 
HYPERLINK(&quot;/apex/Apttus_CMConfig__AgreementConfiguration?id=&quot; &amp;Id&amp;&quot;&amp;useAdvancedApproval=true&amp;flow=LP_Spain_ReadOnly_All&quot;,IMAGE(&quot;/resource/APTS_SelectOffering&quot;, &quot;SelectOffering&quot;),&quot;_self&quot;),NULL)),NULL)</formula>
        <label>Select Offering</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Recall_Approvals__c</fullName>
        <formula>IF(ispickval(Apttus__Status__c ,&apos;Approval In Progress&apos;),HYPERLINK(&quot;/apex/APTS_CancelAgreementApproval?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus__Button_CancelRequest&quot;, &quot;Recall Approval&quot;),&quot;_self&quot;), NULL)</formula>
        <inlineHelpText>Sales User can Recall a MSPA that was sent for approval (when MSPA is in status Approval in Progress)</inlineHelpText>
        <label>Recall Approvals</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Office_LP__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Office</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Code_Used_For__c</field>
                <operation>equals</operation>
                <value>Sales Office</value>
            </filterItems>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.APTS_Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Agreements (Sales Office)</relationshipLabel>
        <relationshipName>MasterPicklist_Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Status_Old__c</fullName>
        <label>APTS LP Status Old</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Channel_Description__c</fullName>
        <description>Field to hold the description value of Local Channel in format of &quot;Code - Description&quot;. Value for this field is populated from Apttus LSO data.</description>
        <inlineHelpText>Auto populated using information from the Quotation or from the Buying Account (LOD selected)</inlineHelpText>
        <label>Local Channel Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Channel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Auto populated using information from the Quotation or from the Buying Account (LOD selected)</inlineHelpText>
        <label>Local Channel</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Code_Used_For__c</field>
                <operation>equals</operation>
                <value>Local Channel</value>
            </filterItems>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Locale__c</field>
                <operation>equals</operation>
                <valueField>$Source.APTS_Locale__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Agreements (Local Channel)</relationshipLabel>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>